--- a/lgbt.html
+++ b/lgbt.html
@@ -4,8 +4,8 @@
   <head>
     <title> LGBT </title>
     <meta charset="utf-8" />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="A website featuring information about the SOGIE Bill and the LGBT Community in the Philippines.">
+    <meta name="keywords" content="SOGIE, LGBT, SOGIE Bill, Philippines LGBT, Gay rights, SOGIE PH">
     <meta name="author" content="Jerome Estrella, Mikhail Ganzon, Rain Lee">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
