--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title> SOGIE Equality Bill </title>
+    <meta charset="utf-8" />
+    <meta name="description" content="A website featuring information about the SOGIE Bill and the LGBT Community in the Philippines.">
+    <meta name="keywords" content="SOGIE, LGBT, SOGIE Bill, Philippines LGBT, Gay rights, SOGIE PH">
+    <meta name="author" content="Jerome Estrella, Mikhail Ganzon, Rain Lee">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="main.js"> </script>
+	  
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157709155-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-157709155-7');
+    </script>
+  </head>
+<body>
 <div class="col-sm-12">
 		    <nav class="navbar navbar-default">
 			    <div class="container-fluid">
@@ -29,3 +55,4 @@
 					</div>
 				</nav>
       </div>
+						      </body>
