--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="container">
-	    <object data="navbar.html"></object>
+	    <object data="navbar.html" style="width:100%;"></object>
       
       <p> Welcome to our website! Here we wish to clarify misinformation regarding the SOGIE Equality Bill (House Bill No. 4982). Our website also contains information about the LGBT community in the Philippines and in general.</p>
         <div class="page">
