--- a/navbar.html
+++ b/navbar.html
@@ -1,51 +1,30 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <title> SOGIE Equality Bill </title>
-    <meta charset="utf-8" />
-    <meta name="description" content="A website featuring information about the SOGIE Bill and the LGBT Community in the Philippines.">
-    <meta name="keywords" content="SOGIE, LGBT, SOGIE Bill, Philippines LGBT, Gay rights, SOGIE PH">
-    <meta name="author" content="Jerome Estrella, Mikhail Ganzon, Rain Lee">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="main.js"> </script>
-	  
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157709155-7"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-157709155-7');
-    </script>
-  </head>
-<body>
 <div class="col-sm-12">
 		    <nav class="navbar navbar-default">
 			    <div class="container-fluid">
 				    <ul class="nav navbar-nav">
               
               <li class="active"> <a href="index.html"> Home </a> </li>
-              <li class=""> <a href="sogie.html"> About the Bill </a> </li>
+              <li class="dropdown"> 
+		      <a class="dropdown-toggle" data-toggle="dropdown"> About the Bill <span class="caret"></span> </a> 
+		      <ul class="dropdown-menu">
+			<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank">Read the bill here</a></li>
+			<li><a href="sogie.html">Explaining the Bill</a></li>
+		      </ul>
+	      </li>
               <li class=""> <a href="opinions.html"> Opinions </a> </li>
               <li class=""> <a href="lgbt.html"> About the LGBT Community </a> </li>
               <li class=""> <a href="PHlgbt.html"> LGBT in the Philippines </a> </li>
               <li class=dropdown>
-					      <a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret></span></a>
+		<a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="jerome.html">Jerome Estrella</a></li>
                   <li><a href="mikey.html">Mikey Ganzon</a></li>
                   <li><a href="rain.html">Rain Lee</a></li>
                 </ul>
               </li>
-              <li class=""> <a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank"> Read the Bill Here </a></li>
-		          <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
-			          <ul class="dropdown-menu">
+	      <li class="dropdown">
+		<a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
+		<ul class="dropdown-menu">
                  <li><a onclick="window.location.reload(true)">English</a></li>
                  <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
 			          </ul>
