--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <li><a href="rain.html">Rain Lee</a></li>
               </ul>
               </li>
-	      <ul class="dropdown">
+	      <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
                  <li><a onclick="window.location.reload(true)">English</a></li>
