--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              <li class=""> <a href="lgbt.html"> About the LGBT Community </a> </li>
              <li class=""> <a href="PHlgbt.html"> LGBT in the Philippines </a> </li>
              <li class=dropdown>
-	      <a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret></span></a>
+	      <a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="jerome.html">Jerome Estrella</a></li>
                   <li><a href="mikey.html">Mikey Ganzon</a></li>
