--- a/index.html
+++ b/index.html
@@ -30,38 +30,41 @@
 	 <nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
-            <li class="active"> <a href="index.html"> Home </a> </li>
-            <li class="dropdown"> 
-	     <a class="dropdown-toggle" data-toggle="dropdown"> About the Bill <span class="caret"></span> </a> 
-	      <ul class="dropdown-menu">
-	       <li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank">Read the bill here</a></li>
-	       <li><a href="sogie.html">Explaining the Bill</a></li>
-	      </ul>
-	     </li>
-             <li class=""> <a href="opinions.html"> Opinions </a> </li>
-             <li class=""> <a href="lgbt.html"> About the LGBT Community </a> </li>
-             <li class=""> <a href="PHlgbt.html"> LGBT in the Philippines </a> </li>
-             <li class=dropdown>
-	      <a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret"></span></a>
-              <ul class="dropdown-menu">
+        <li class="active"> <a href="index.html"> Home </a> </li>
+        <li class="dropdown"> 
+			<a class="dropdown-toggle" data-toggle="dropdown"> About the Bill <span class="caret"></span> </a> 
+			<ul class="dropdown-menu">
+				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank">Read the bill here</a></li>
+				<li><a href="sogie.html">Explaining the Bill</a></li>
+			</ul>
+	    </li>
+        <li class=""> <a href="opinions.html"> Opinions </a> </li>
+	<li class="dropdown">
+		<a class="dropdown-toggle" data-toggle="dropdown"> About the LGBT Community <span class="caret"></span></a>
+		<ul class="dropdown-menu">
+			<li><a href="lgbt.html">LGBT Internationally</a></li>
+			<li><a href="PHlgbt.html">LGBT in the Philippines</a></li>
+			</li>
+        <li class=dropdown>
+		<a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret"></span></a>
+        <ul class="dropdown-menu">
                   <li><a href="jerome.html">Jerome Estrella</a></li>
                   <li><a href="mikey.html">Mikey Ganzon</a></li>
                   <li><a href="rain.html">Rain Lee</a></li>
-              </ul>
-              </li>
-	      <li class="dropdown">
+        </ul>
+        </li>
+	    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-                 <li><a onclick="window.location.reload(true)">English</a></li>
-                 <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
-			          </ul>
-		          </li>
-		        </ul>
-					 <input class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
-					</div>
-				</nav>
-      </div>
-
+            <li><a onclick="window.location.reload(true)">English</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+		</ul>
+		</li>
+		</ul>
+		<input class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
+		</div>
+		</nav>
+</div>
       
       <p> Welcome to our website! Here we wish to clarify misinformation regarding the SOGIE Equality Bill (House Bill No. 4982). Our website also contains information about the LGBT community in the Philippines and in general.</p>
         <div class="page">
