--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</ul>
 	    </li>
         <li class=""> <a href="opinions.html"> Opinions </a> </li>
-			<li><a href="lgbt.html">LGBT Internationally</a></li>
+			<li><a href="lgbt.html">LGBT Community</a></li>
 			<li><a href="PHlgbt.html">LGBT in the Philippines</a></li>
         <li class=dropdown>
 		<a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret"></span></a>
