--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 	 <nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
-        <li class="active"> <a href="index.html"> Home </a> </li>
+        <li class="active" id="home"> <a href="index.html"> Home </a> </li>
         <li class="dropdown"> 
-			<a class="dropdown-toggle" data-toggle="dropdown"> About the Bill <span class="caret"></span> </a> 
+			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
 			<ul class="dropdown-menu">
-				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank">Read the bill here</a></li>
-				<li><a href="sogie.html">Explaining the Bill</a></li>
+				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank" id="linkToBill">Read the bill here</a></li>
+				<li><a href="sogie.html" id="billExplain">Explaining the Bill</a></li>
 			</ul>
 	    </li>
-        <li class=""> <a href="opinions.html"> Opinions </a> </li>
-			<li><a href="lgbt.html">LGBT Community</a></li>
-			<li><a href="PHlgbt.html">LGBT in the Philippines</a></li>
-		   <li><a href="news.html"> News </a></li>
+        <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
+			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
+			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
+		   <li><a href="news.html" id="news"> News </a></li>
         <li class=dropdown>
-		<a class="dropdown-toggle" data-toggle="dropdown"> About the Authors <span class="caret"></span></a>
+		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
         <ul class="dropdown-menu">
                   <li><a href="jerome.html">Jerome Estrella</a></li>
                   <li><a href="mikey.html">Mikey Ganzon</a></li>
@@ -51,7 +51,7 @@
         </ul>
         </li>
 	    <li class="dropdown">
-		<a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
+		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
             <li><a onclick="window.location.reload(true)">English</a></li>
             <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
