--- a/lgbt.html
+++ b/lgbt.html
@@ -26,27 +26,42 @@
 
   <body>
     <div class="container">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav">
-            <li class=""> <a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank"> Read the Bill Here </a> </li>
-            <li class=""> <a href="index.html"> Home </a> </li>
-            <li class=""> <a href="sogie.html"> About the Bill </a> </li>
-            <li class=""> <a href="opinions.html"> Opinions </a> </li>
-            <li class="active"> <a href="lgbt.html"> About the LGBT Community </a> </li>
-            <li class=""> <a href="PHlgbt.html"> LGBT in the Philippines </a> </li>
-            <li class=""> <a href="about.html"> About the Authors </a> </li>
-		      	<li class="dropdown">
-			        <a class="dropdown-toggle" data-toggle="dropdown">Language<span class="caret"></span></a>
-			        <ul class="dropdown-menu">
-				      <li><a onclick="window.location.reload(true)">English</a></li>
-				      <li><a onclick="tabsFilipinoTranslation(); statisticsFilipinoTranslation();">Filipino</a></li>
-			        </ul>
-		        </li>
-		      </ul>
-		      <input class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
-		    </div>
-		  </nav>
+      <div class="col-sm-12">
+	 <nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	   <ul class="nav navbar-nav">
+        <li class="active" id="home"> <a href="index.html"> Home </a> </li>
+        <li class="dropdown"> 
+			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
+			<ul class="dropdown-menu">
+				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank" id="linkToBill">Read the bill here</a></li>
+				<li><a href="sogie.html" id="billExplain">Explaining the Bill</a></li>
+			</ul>
+	    </li>
+        <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
+			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
+			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
+		   <li><a href="news.html" id="news"> News </a></li>
+        <li class=dropdown>
+		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+                  <li><a href="jerome.html">Jerome Estrella</a></li>
+                  <li><a href="mikey.html">Mikey Ganzon</a></li>
+                  <li><a href="rain.html">Rain Lee</a></li>
+        </ul>
+        </li>
+	    <li class="dropdown">
+		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
+		<ul class="dropdown-menu">
+            <li><a onclick="window.location.reload(true)">English</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+		</ul>
+		</li>
+		</ul>
+		<input class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
+		</div>
+		</nav>
+</div>
       
       <h2>LGBT Statistics</h2>
         <h4> Philippines </h4>
