--- a/opinions.html
+++ b/opinions.html
@@ -63,7 +63,7 @@
 		</nav>
 </div>
       
-      <div class="alert alert-danger">
+      <div class="alert alert-danger col-sm-12">
         <b>Please take note:</b> Inappropriate messages will not be posted on the message board.
       </div>
       
