--- a/sogie.html
+++ b/sogie.html
@@ -32,11 +32,11 @@
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
         <li  id="home"> <a href="index.html"> Home </a> </li>
-        <li class="dropdown"> 
+        <li class="dropdown" class="active"> 
 			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
 			<ul class="dropdown-menu">
 				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank" id="linkToBill">Read the bill here</a></li>
-				<li><a href="sogie.html" class="active" id="billExplain">Explaining the Bill</a></li>
+				<li class="active"><a href="sogie.html"  id="billExplain">Explaining the Bill</a></li>
 			</ul>
 	    </li>
         <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
