--- a/lgbt.html
+++ b/lgbt.html
@@ -39,7 +39,7 @@
 			</ul>
 	    </li>
         <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
-			<li><a href="lgbt.html" class="active" id="LGBTComm">LGBT Community</a></li>
+			<li class="active"><a href="lgbt.html"  id="LGBTComm">LGBT Community</a></li>
 			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
 		   <li><a href="news.html" id="news"> News </a></li>
         <li class=dropdown>
