--- a/PHlgbt.html
+++ b/PHlgbt.html
@@ -30,7 +30,7 @@
 	 <nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
-        <li class="active" id="home"> <a href="index.html"> Home </a> </li>
+        <li id="home"> <a href="index.html"> Home </a> </li>
         <li class="dropdown"> 
 			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
 			<ul class="dropdown-menu">
@@ -40,7 +40,7 @@
 	    </li>
         <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
 			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
-			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
+			<li class="active"><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
 		   <li><a href="news.html" id="news"> News </a></li>
         <li class=dropdown>
 		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
