--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
         <li class=""> <a href="opinions.html" id="opinions"> Opinions </a> </li>
 			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
 			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
-		   <li><a href="news.html" id="news" class="active"> News </a></li>
+		   <li class="active"><a href="news.html" id="news" > News </a></li>
         <li class=dropdown>
 		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
         <ul class="dropdown-menu">
