--- a/rain.html
+++ b/rain.html
@@ -31,7 +31,7 @@
 	 <nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
-        <li class="active" id="home"> <a href="index.html"> Home </a> </li>
+        <li  id="home"> <a href="index.html"> Home </a> </li>
         <li class="dropdown"> 
 			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
 			<ul class="dropdown-menu">
@@ -43,12 +43,12 @@
 			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
 			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
 		   <li><a href="news.html" id="news"> News </a></li>
-        <li class=dropdown>
+        <li class=dropdown class="active">
 		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
         <ul class="dropdown-menu">
                   <li><a href="jerome.html">Jerome Estrella</a></li>
                   <li><a href="mikey.html">Mikey Ganzon</a></li>
-                  <li><a href="rain.html">Rain Lee</a></li>
+                  <li class="active"><a href="rain.html">Rain Lee</a></li>
         </ul>
         </li>
 	    <li class="dropdown">
