--- a/jerome.html
+++ b/jerome.html
@@ -43,7 +43,7 @@
 			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
 			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
 		   <li><a href="news.html" id="news"> News </a></li>
-        <li class=dropdown class="active">
+        <li class="dropdown active">
 		<a class="dropdown-toggle" data-toggle="dropdown" id="aboutAuthors"> About the Authors <span class="caret"></span></a>
         <ul class="dropdown-menu">
                   <li class="active"><a href="jerome.html">Jerome Estrella</a></li>
