--- a/opinions.html
+++ b/opinions.html
@@ -38,7 +38,7 @@
 				<li><a href="sogie.html" id="billExplain">Explaining the Bill</a></li>
 			</ul>
 	    </li>
-        <li class=""> <a href="opinions.html" class="active" id="opinions"> Opinions </a> </li>
+        <li class="active"> <a href="opinions.html" id="opinions"> Opinions </a> </li>
 			<li><a href="lgbt.html" id="LGBTComm">LGBT Community</a></li>
 			<li><a href="PHlgbt.html" id="LGBTPH">LGBT in the Philippines</a></li>
 		   <li><a href="news.html" id="news"> News </a></li>
