--- a/sogie.html
+++ b/sogie.html
@@ -32,7 +32,7 @@
 	  <div class="container-fluid">
 	   <ul class="nav navbar-nav">
         <li  id="home"> <a href="index.html"> Home </a> </li>
-        <li class="dropdown" class="active"> 
+        <li class="dropdown active"> 
 			<a class="dropdown-toggle" data-toggle="dropdown" id="aboutBill"> About the Bill <span class="caret"></span> </a> 
 			<ul class="dropdown-menu">
 				<li><a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf" target="_blank" id="linkToBill">Read the bill here</a></li>
