--- a/lgbt.html
+++ b/lgbt.html
@@ -54,7 +54,7 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
             <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); statisticsFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
