--- a/lgbt.html
+++ b/lgbt.html
@@ -93,7 +93,7 @@
         <p> 26 countries also legalize same-sex marriage, with the latest being Australia in December 2017. In the Philippines, the
           government has finalized its decision to not legalize same-sex marriage in the country. </p>
           
-      <div class="alert alert-danger">
+      <div class="alert alert-danger" id="gaykillers">
         <b> The following countries still legalize the death penalty for homosexuality: </b> Iran, Sudan, Saudi Arabia, Yemen, Somalia,
           Nigeria, Syria and Iraq.
       </div>
