--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="page">  
             <a href=about.html>
-			      <img class="button-preview" height=300px width=300px src="https://66.media.tumblr.com/avatar_bc5cc84f93a2_128.pnj">
+			      <img class="button-preview" height=300px width=300px src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/PSHS_System_Logo.png/220px-PSHS_System_Logo.png">
             <button class="btn ">About the Authors</button>
             </a>
         </div>
