--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"> </script>
-	  
+	  <script>
+		 if (localStorage.language == "filipino"){
+			 tabsFilipinoTranslation(); homeFilipinoTranslation();
+		 }
+	  </script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157709155-7"></script>
     <script>
@@ -54,8 +58,8 @@
 	    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-            <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="setEng(); window.location.reload(true)">English</a></li>
+            <li><a onclick="setFil(); tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
