--- a/lgbt.html
+++ b/lgbt.html
@@ -13,7 +13,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"> </script>
-	  
+	  	  <script>
+		 if (localStorage.language == "filipino"){
+			 tabsFilipinoTranslation(); statisticsFilipinoTranslation();
+		 }
+	  </script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157709155-7"></script>
     <script>
