--- a/lgbt.html
+++ b/lgbt.html
@@ -14,9 +14,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"> </script>
 	  	  <script>
+			  window.onload = function(){	
 		 if (localStorage.language == "filipino"){
 			 tabsFilipinoTranslation(); statisticsFilipinoTranslation();
-		 }
+		 }}
 	  </script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157709155-7"></script>
